static/css/layout/nav.scss
nav.top {
	width: 100%;
	height: $space64;
	padding: 28px $space32 0;
	vertical-align:middle;
	position: absolute;
	top:0;
	background: $header;
	overflow: hidden;
}
.teach nav.top {
	background: tran
}
.home nav.top {
	position: absolute;
}
.docs nav.top {
	z-index: 100;
}
nav.top ul {
	max-width: 1020px;
	margin:0 auto;
}
@include keyframes(fade-in) {
	0%   { top: -64px; }
	100% { top: 0; }
}
nav.top.sticky {
 	@include animation('fade-in .2s forwards');
 	position: fixed;
 	z-index: 400;
} 
@include keyframes(fade-out) {
	0%   { top: 0; }
 	100% { top: -64px; }
}
// Nav fade-out
nav.top.fade-out {
	@include animation('fade-out .2s forwards');
	position: fixed;
}
// Targets all navigation items, not just top nav.
nav li,
.learn-nav a {
	float: left;
	font-size: 12px;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: 0.5px;
	line-height: inherit;
	position: relative;
	z-index: 300;
}
nav.top a {
	text-shadow: 0 1px 0 rgba(0,0,0,0.1);
}
.nav-items li:first-child,
nav li+li {
	padding-left: $space24;
}
nav a {
	color: $nav-links;
	font-weight: 600;
}
// Active nav
.active a {
	color: #fff;
}
// Hover States
nav.top a:hover,
nav.top a:focus {
	color: lighten($nav-links, 40%);
	opacity: 1;
}
nav.top input:hover,
nav.top input:focus {
	color: $blue60;
}
nav.top a.green:hover,
nav.top a.green:focus {
	color: $green60;
	opacity: 1;
}
nav.top form {
	display: inline-block;
}
nav.top input {
	font: inherit;
	font-weight: 600;
	background: none;
	color: $blue;
	cursor: pointer; cursor: hand;
	-webkit-font-smoothing: antialiased;
	text-transform: uppercase;
	border: none;
	line-height: 1;
	letter-spacing: 0.5px;
}
// More dropdown
.more, 
.more-dropdown {
	-webkit-user-select: none; 
	-moz-user-select: none;   
	-ms-user-select: none;    
}
.more-dropdown-container {
	position: relative;
}
.more {
	cursor: pointer;
	cursor: hand;
	display: inline-block;
	@include transition(all, 0.2s, ease);
}
.more.active {
	color: #fff;
}
.more-dropdown {
	opacity: 0;
	visibility: hidden;
	box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 4px 12px rgba(0,0,0,.2);
	border-radius: 3px;
	position: absolute;
	width:80px;
	text-align: center;
	left:50%;
	top: 26px;
	@include transform-origin(50% 0);
}
.more-dropdown.appear {
	opacity: 1;
	margin-left: -28px;
	visibility: visible;
	z-index: 300;
	@include animation('bouncy .3s 1');
}
// Dropdown Caret
.more-dropdown:before {
	position: absolute;
	top:-4px;
	left:50%;
	margin-left:-6px;
	content:"";
	width: 0; 
	height: 0; 
	border-left: 6px solid transparent;
	border-right: 6px solid transparent;
	border-bottom: 4px solid #fff;
}
// No shadow for dropdown items
nav.top li ul a {
	text-shadow: none;
}
.more-dropdown a {
	display: block;
	float: none;
	padding: 12px 0 8px 0;
	background: #fff;
	font-size: 10px;
	letter-spacing: 0.5px;
}
.more-dropdown a:first-child {
	border-radius: 3px 3px 0 0;
}
.more-dropdown a {
	border-bottom: 1px solid $separator;
}
.more-dropdown a:last-child {
	border-radius: 0 0 3px 3px;
	border-bottom: none;
}
.more-dropdown a:hover {
	background: $blue;
	color: #fff;
	border-bottom-color: #fff;
}
.more-dropdown.on-hover:before {
	border-bottom-color: $blue;
}
@media screen and (max-width: 1000px) {
	nav.top .content-inner {
		padding: 0 $space16;
	}
}
@media screen and (max-width: 790px) {
	nav.top .download,
	nav.top .buy {
		display: none;
	}
	.nav-items {
		float: right;
	}
}
@media screen and (max-width:600px) {
	nav.top, 
	nav.top.sticky,
	nav.top.fade-out {
		line-height: 1;
		position: relative;
		text-align: center;
	}
	// Title
	nav.top .framer a {
		color: #fff;
	}
	nav.top {
		height:88px;
		padding-top:0;
	}
	nav.top .framer {
		width:100%;
		height: 44px;
		padding-top:18px;
		box-shadow: 0 1px 0 rgba(255,255,255,0.1);
	}
	.nav-items,
	nav.top .right {
		float:none;
		margin-top:16px;
	}
	nav.top li {
		display:inline-block;
		float:none;
	}
	.nav-items li:first-child {
		padding-left: 0;
	}
	nav li+li {
		padding-left: $space16;
	}
	nav.top .download,
	nav.top .github,
	nav.top .community,
	nav.top .buy {
		display: none;
	}
}

